<resources>
    <string name="app_name">ViggosIDLE</string>
    <string name="title_home">Drink</string>
    <string name="title_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="main_beer_image">Main beer image</string>
    <string name="score">Score</string>
    <string name="bagel">Bagel</string>
    <string name="clicking_upgrades">Clicking upgrades</string>
    <string name="pizza">Pizza</string>
    <string name="underberg">underberg</string>
    <string name="autoclickers">Autoclickers</string>
    <string name="piger_ved_bordet">Piger ved bordet</string>
    <string name="score_home">Score</string>
    <string name="reset">Reset</string>
    <string name="per_click">per click:</string>
    <string name="_0">0</string>
    <string name="per_second">per second:</string>
    <string name="score_shop">Score</string>
</resources>